--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,3 +353,12 @@ nav {
 b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a, tr, td, .highlight {
 	@include transition (color 0.2s ease-out, opacity 0.2s ease-out, background 0.2s ease-out, border-color 0.2s ease-out);
 }
+
+
+//----------CARLES------------------------------------
+.float-right-small {
+  float: right;
+  width: 120px;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+}
